@@ -1,5 +1,9 @@
 1999-07-10  Laurent Pautet  <pautet@dorine.enst.fr>
 
+        * s-gartcp.adb: Recycle Connection_Handler once a connection is
+        closed. Reduce memory leaks on tasks (no deallocation of primary
+        and secondary stack once a task is terminated.
+
         * s-gartyp.ads, s-garuni.ads, s-parint.adb: Use Version_Type
         instead of String_Access to define unit versions. Prevent some
         memory leaks.
